--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 
   <!-- Swiper CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
-
-  <!-- Seu CSS personalizado -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -31,10 +29,11 @@
 
     <div id="menuPrincipal" class="navbar-menu">
       <div class="navbar-end">
-        <a class="navbar-item" href="#">Início</a>
-        <a class="navbar-item" href="#">Motos</a>
-        <a class="navbar-item" href="#">Sobre</a>
-        <a class="navbar-item" href="#">Contato</a>
+        <a class="navbar-item" href="index.html">Início</a>
+        <a class="navbar-item" href="motos.html">Motos</a>
+        <a class="navbar-item" href="sobre.html">Sobre</a>
+        <a class="navbar-item" href="contato.html">Contato</a>
+        <a class="navbar-item" href="localizacao.html">Localização</a>
       </div>
     </div>
   </nav>
