--- a/sobre.html
+++ b/sobre.html
@@ -96,7 +96,7 @@
       </p>
 
       <p>
-        Localizada em Penha - SC, a D2 Motos é referência regional pela seriedade, transparência nas negociações e pela grande variedade de modelos disponíveis em estoque.
+        Localizada em Itajaí - SC, a D2 Motos é referência regional pela seriedade, transparência nas negociações e pela grande variedade de modelos disponíveis em estoque.
         Se você busca economia, estilo ou performance, aqui é o seu lugar.
       </p>
 
