--- a/contato.html
+++ b/contato.html
@@ -85,7 +85,7 @@
     <h1 class="title has-text-centered">Fale Conosco</h1>
 
     <div class="content is-medium">
-      <p class="mb-4"><i class="fas fa-map-marker-alt"></i> <strong>Endereço:</strong> Rua das Motos, 123 - Penha/SC</p>
+      <p class="mb-4"><i class="fas fa-map-marker-alt"></i> <strong>Endereço:</strong> Av. Irineu Bornhausen, 235 - São João, Itajaí - SC</p>
       <p class="mb-4"><i class="fas fa-phone"></i> <strong>Telefone:</strong> (47) 3344-5566</p>
       <p class="mb-4"><i class="fab fa-whatsapp"></i> <strong>WhatsApp:</strong> (47) 9 9988-7766</p>
       <p class="mb-4"><i class="fas fa-envelope"></i> <strong>E-mail:</strong> contato@d2motos.com.br</p>
