--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     <!-- Botões -->
     <div class="has-text-centered mt-4">
       <button id="btnVerMais" class="button is-danger is-medium" onclick="mostrarMaisMotos()">
-        Ver todas motos
+        Ver mais motos
       </button>
       <button id="btnVerMenos" class="button is-dark is-medium" onclick="ocultarMaisMotos()" style="display: none;">
         Ver menos
@@ -178,18 +178,35 @@
           <div class="card">
             <div class="card-image">
               <figure class="image">
+                <img src="images/motos-a-venda/moto4.jpg" alt="Moto 4">
+              </figure>
+            </div>
+            <div class="card-content">
+              <p class="title is-5 mb-2">Yamaha Factor 150</p>
+              <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 14.800</p>
+              <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 22.000 km rodados</p>
+              <p class="is-size-6">Confiável, econômica e ideal para o uso urbano. A Yamaha Factor 150 oferece ótimo desempenho e conforto no dia a dia.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 5 -->
+        <div class="column is-one-third">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image">
                 <img src="images/motos-a-venda/moto5.jpg" alt="Moto 5">
               </figure>
             </div>
             <div class="card-content">
-              <p class="title is-5 mb-2">BMW G 310R</p>
-              <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 27.800</p>
+              <p class="title is-5 mb-2">Honda Biz</p>
+              <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 13.900</p>
               <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 8.000 km rodados</p>
-              <p class="is-size-6">Alta tecnologia com visual agressivo. Ideal para a cidade.</p>
+              <p class="is-size-6">Prática, versátil e com ótimo consumo de combustível. A Honda Biz é ideal para quem busca mobilidade com estilo e economia.</p>
             </div>
           </div>
         </div>
-
+  
         <!-- Card 6 -->
         <div class="column is-one-third">
           <div class="card">
@@ -199,10 +216,78 @@
               </figure>
             </div>
             <div class="card-content">
-              <p class="title is-5 mb-2">XRE 300 Rally</p>
-              <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 23.500</p>
-              <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 20.000 km rodados</p>
-              <p class="is-size-6">Pronta para o asfalto e para a aventura.</p>
+              <p class="title is-5 mb-2">Cg Fan 160</p>
+              <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 19.500</p>
+              <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 3.000 km rodados</p>
+              <p class="is-size-6"> Moderna, resistente e com excelente economia de combustível. A CG Fan 160 2025 é ideal para trabalho e uso diário com baixo custo de manutenção.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 7 -->
+        <div class="column is-one-third">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image">
+                <img src="images/motos-a-venda/moto7.jpg" alt="Moto 7">
+              </figure>
+            </div>
+            <div class="card-content">
+              <p class="title is-5 mb-2">Yamaha Lander 250</p>
+              <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 24.900</p>
+              <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 7.300 km rodados</p>
+              <p class="is-size-6">Versatilidade e robustez para estrada e terra.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 8 -->
+        <div class="column is-one-third">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image">
+                <img src="images/motos-a-venda/moto8.jpg" alt="Moto 8">
+              </figure>
+            </div>
+            <div class="card-content">
+              <p class="title is-5 mb-2">Yamaha Ténéré 250</p>
+              <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 25.900</p>
+              <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 14.000 km rodados</p>
+              <p class="is-size-6"> Robusta, confiável e pronta para qualquer terreno. A Ténéré 250 é perfeita para quem busca aventura e conforto em longas viagens ou no uso urbano.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 9 -->
+        <div class="column is-one-third">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image">
+                <img src="images/motos-a-venda/moto9.jpg" alt="Moto 9">
+              </figure>
+            </div>
+            <div class="card-content">
+              <p class="title is-5 mb-2">Honda Biz</p>
+              <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 15.900</p>
+              <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 6.000 km rodados</p>
+              <p class="is-size-6">Prática, versátil e com ótimo consumo de combustível. A Honda Biz é ideal para quem busca mobilidade com estilo e economia.</p>
+            </div>
+          </div>
+        </div>
+  
+        <!-- Card 10 -->
+        <div class="column is-one-third">
+          <div class="card">
+            <div class="card-image">
+              <figure class="image">
+                <img src="images/motos-a-venda/moto10.jpg" alt="Moto 10">
+              </figure>
+            </div>
+            <div class="card-content">
+              <p class="title is-5 mb-2">Honda Biz</p>
+              <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 15.900</p>
+              <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 9.200 km rodados</p>
+              <p class="is-size-6">Prática, versátil e com ótimo consumo de combustível. A Honda Biz é ideal para quem busca mobilidade com estilo e economia.</p>
             </div>
           </div>
         </div>
