--- a/motos.html
+++ b/motos.html
@@ -148,10 +148,10 @@
             </figure>
           </div>
           <div class="card-content">
-            <p class="title is-5 mb-2">Yamaha Fazer 250</p>
-            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 22.000</p>
-            <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 10.500 km rodados</p>
-            <p class="is-size-6">Design esportivo e excelente desempenho urbano.</p>
+            <p class="title is-5 mb-2">Yamaha Factor 150</p>
+            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 14.800</p>
+            <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 22.000 km rodados</p>
+            <p class="is-size-6">Confiável, econômica e ideal para o uso urbano. A Yamaha Factor 150 oferece ótimo desempenho e conforto no dia a dia.</p>
           </div>
         </div>
       </div>
@@ -165,10 +165,10 @@
             </figure>
           </div>
           <div class="card-content">
-            <p class="title is-5 mb-2">BMW G 310R</p>
-            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 27.800</p>
+            <p class="title is-5 mb-2">Honda Biz</p>
+            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 13.900</p>
             <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 8.000 km rodados</p>
-            <p class="is-size-6">Alta tecnologia com visual agressivo. Ideal para a cidade.</p>
+            <p class="is-size-6">Prática, versátil e com ótimo consumo de combustível. A Honda Biz é ideal para quem busca mobilidade com estilo e economia.</p>
           </div>
         </div>
       </div>
@@ -182,10 +182,10 @@
             </figure>
           </div>
           <div class="card-content">
-            <p class="title is-5 mb-2">XRE 300 Rally</p>
-            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 23.500</p>
-            <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 20.000 km rodados</p>
-            <p class="is-size-6">Pronta para o asfalto e para a aventura.</p>
+            <p class="title is-5 mb-2">Cg Fan 160</p>
+            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 19.500</p>
+            <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 3.000 km rodados</p>
+            <p class="is-size-6"> Moderna, resistente e com excelente economia de combustível. A CG Fan 160 2025 é ideal para trabalho e uso diário com baixo custo de manutenção.</p>
           </div>
         </div>
       </div>
@@ -216,10 +216,10 @@
             </figure>
           </div>
           <div class="card-content">
-            <p class="title is-5 mb-2">Honda CG 160 Titan</p>
-            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 15.800</p>
+            <p class="title is-5 mb-2">Yamaha Ténéré 250</p>
+            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 25.900</p>
             <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 14.000 km rodados</p>
-            <p class="is-size-6">Moto prática e econômica, perfeita para o uso urbano.</p>
+            <p class="is-size-6"> Robusta, confiável e pronta para qualquer terreno. A Ténéré 250 é perfeita para quem busca aventura e conforto em longas viagens ou no uso urbano.</p>
           </div>
         </div>
       </div>
@@ -233,10 +233,10 @@
             </figure>
           </div>
           <div class="card-content">
-            <p class="title is-5 mb-2">Kawasaki Z400</p>
-            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 29.900</p>
+            <p class="title is-5 mb-2">Honda Biz</p>
+            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 15.900</p>
             <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 6.000 km rodados</p>
-            <p class="is-size-6">Estilo naked com agressividade e leveza.</p>
+            <p class="is-size-6">Prática, versátil e com ótimo consumo de combustível. A Honda Biz é ideal para quem busca mobilidade com estilo e economia.</p>
           </div>
         </div>
       </div>
@@ -250,10 +250,10 @@
             </figure>
           </div>
           <div class="card-content">
-            <p class="title is-5 mb-2">Royal Enfield Meteor 350</p>
-            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 25.900</p>
+            <p class="title is-5 mb-2">Honda Biz</p>
+            <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 15.900</p>
             <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 9.200 km rodados</p>
-            <p class="is-size-6">Estilo retrô com conforto e torque em baixa rotação.</p>
+            <p class="is-size-6">Prática, versátil e com ótimo consumo de combustível. A Honda Biz é ideal para quem busca mobilidade com estilo e economia.</p>
           </div>
         </div>
       </div>
