--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
           <div class="card">
             <div class="card-image">
               <figure class="image">
-                <img src="images/motos-a-venda/moto4.jpg" alt="Moto 4">
+                <img src="images/motos-a-venda/moto12.jpg" alt="Moto 4">
               </figure>
             </div>
             <div class="card-content">
-              <p class="title is-5 mb-2">Yamaha Fazer 250</p>
+              <p class="title is-5 mb-2">Honda Twister 250</p>
               <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 22.000</p>
               <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 10.500 km rodados</p>
               <p class="is-size-6">Design esportivo e excelente desempenho urbano.</p>
