add icone whatsapp

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -356,6 +357,11 @@
   }
 </script>
 
+
+<!-- Ícone flutuante do WhatsApp -->
+<a href="https://wa.me/5547912345678" class="whatsapp-float" target="_blank" aria-label="Fale conosco no WhatsApp">
+  <i class="fab fa-whatsapp"></i>
+</a>
 
 
 </body>
