--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               </figure>
             </div>
             <div class="card-content">
-              <p class="title is-5 mb-2">Cg Fan 160</p>
+              <p class="title is-5 mb-2">Cg Titan 160</p>
               <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 19.500</p>
               <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 3.000 km rodados</p>
               <p class="is-size-6"> Moderna, resistente e com excelente economia de combustível. A CG Fan 160 2025 é ideal para trabalho e uso diário com baixo custo de manutenção.</p>
@@ -234,7 +234,7 @@
               </figure>
             </div>
             <div class="card-content">
-              <p class="title is-5 mb-2">Yamaha Lander 250</p>
+              <p class="title is-5 mb-2">Himalayan 411</p>
               <p class="has-text-danger has-text-weight-bold is-size-5 mb-1">R$ 24.900</p>
               <p class="is-size-7 has-text-grey mb-3"><i class="fas fa-tachometer-alt"></i> 7.300 km rodados</p>
               <p class="is-size-6">Versatilidade e robustez para estrada e terra.</p>
